--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,27 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: garamond, serif;
 }
 
 nav {
-    border: 1px solid black;
     background: rgba(0, 128, 119);
     height: 10vh;
-    
+    display: flex; 
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+h1 {
+    color: white; 
+    font-weight: bolder; 
+    font-size: 36px;
 }
 
 ul {
     text-align: right;
+    display: inline;
 }
 
 nav li {
@@ -23,4 +33,8 @@ nav a {
     text-decoration: none;
     color: white; 
     font-size: 22px;
+}
+
+section {
+    border: 1px solid red; 
 }
