--- a/assets/style.css
+++ b/assets/style.css
@@ -17,16 +17,19 @@ h1 {
     color: white; 
     font-weight: bolder; 
     font-size: 36px;
+    margin-left: 10px;
 }
 
-ul {
+nav ul {
     text-align: right;
     display: inline;
+    margin-right: 10px;
 }
 
 nav li {
     display: inline; 
     margin: 0 5px; 
+    text-wrap: nowrap;
 }
 
 nav a {
