--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     font-family: garamond, serif;
+    font-size: 20px;
 }
+
 
 nav {
     background: rgba(0, 128, 119);
@@ -38,11 +40,24 @@ nav a {
     font-size: 22px;
 }
 
+#header-subtitle {
+    position: absolute; 
+    right: 10px;
+    bottom: 575px;
+    background-color: rgba(0, 128, 119);
+    color: white; 
+}
+
 section {
-    border: 1px solid red; 
+    margin: 20px 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+}
+
+section > h2 {
+    margin-left: 20px;
 }
 
 #header-image {
@@ -55,7 +70,34 @@ section {
     width: 60%;
 }
 
-#work-boxes {
-    border: solid 1px blue;;
+#work {
+    border: solid 1px yellow;
 }
+
+#work-boxes {
+    border: solid 1px blue;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 70%;
+    
+}
+
+#primary-project {
+    width: 100%;
+    min-height: 50px;
+}
+
+#secondary-project {
+    display: flex;
+    flex-wrap: wrap; 
+}
+
+.box {
+    border: 1px solid black;
+
+}
+
+
+@media and screen (max-width: )
 
