--- a/assets/style.css
+++ b/assets/style.css
@@ -40,12 +40,24 @@ nav a {
     font-size: 22px;
 }
 
+#header-image-container {
+    width: 100%;
+    height: 30vh;
+    margin: 0;
+}
+
+#header-image {
+    width: 100%;
+    height: 100%;
+}
+
 #header-subtitle {
     position: absolute; 
     right: 10px;
-    bottom: 575px;
+    bottom: 15px;
     background-color: rgba(0, 128, 119);
     color: white; 
+    z-index: 2;
 }
 
 section {
@@ -58,32 +70,24 @@ section {
 
 section > h2 {
     margin-left: 20px;
-}
-
-#header-image {
-    width: 100%;
-    height: 30vh;
-    margin: 0;
+    font-size: 28px;
 }
 
 #about-me p {
     width: 60%;
 }
 
-#work {
-    border: solid 1px yellow;
-}
-
 #work-boxes {
-    border: solid 1px blue;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     width: 70%;
+    margin: 0 10px;
     
 }
 
 #primary-project {
+
     width: 100%;
     min-height: 50px;
 }
@@ -94,10 +98,27 @@ section > h2 {
 }
 
 .box {
-    border: 1px solid black;
 
 }
 
+#contact-me {
+    display: flex; 
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
 
-@media and screen (max-width: )
+#contact-me ul {
+    text-align: right;
+    display: flex;
+    justify-content: space-between;
+}
+
+#contact-me li {
+    display: inline; 
+    margin: 0 10px; 
+    text-wrap: nowrap;
+}
+
+
 
