--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,7 @@
     font-size: 20px;
 }
 
+/* Nav bar styling */
 
 nav {
     background: rgba(0, 128, 119);
@@ -40,6 +41,8 @@ nav a {
     font-size: 22px;
 }
 
+/* header image styling */
+
 #header-image-container {
     width: 100%;
     height: 30vh;
@@ -60,6 +63,8 @@ nav a {
     z-index: 2;
 }
 
+/* section styling  */
+
 section {
     margin: 20px 0;
     display: flex;
@@ -73,14 +78,17 @@ section > h2 {
     font-size: 28px;
 }
 
+/* about me styling */
+
 #about-me p {
     width: 60%;
 }
 
+/* work section styling */
+
 #work-boxes {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     width: 70%;
     margin: 0 10px;
     height: 80vh;
@@ -89,7 +97,7 @@ section > h2 {
 
 #primary-project {
 
-    width: 100%;
+    width: 50%;
     min-height: 50px;
     background-color: teal;
     height: 50%;
@@ -99,26 +107,32 @@ section > h2 {
 #secondary-project {
     display: flex;
     height: 50%;
+    flex-wrap: wrap; 
 }
 
 .box {
-
+    width: 50px;
+    height: 50px;
 }
 
 #project2 {
-    background-color: aquamarine;
+flex-wrap: wrap;
+
 }
 
 #project3 {
-    background-color: cadetblue;
+
+
 }
 
 #project4 {
-    background-color: cornflowerblue;
+
+
 }
 
 #project5 {
-    background-color: darkcyan;
+ 
+   
 }
 
 #contact-me {
@@ -127,6 +141,8 @@ section > h2 {
     align-items: center;
     justify-content: space-between;
 }
+
+/* contact me section styling */
 
 #contact-me ul {
     text-align: right;
