--- a/assets/style.css
+++ b/assets/style.css
@@ -115,29 +115,41 @@ section > h2 {
 }
 
 #primary-project h4 {
-    
-    position: absolute;
+    position: relative;
     background-color: teal;
     color: black;
-    bottom: 130px;
+    bottom: 25px;
+    display: inline;
 
 }
 
 #secondary-project {
-    border: 1px solid red;
+
     display: flex;
     width: 100%;
     height: 50%;
     flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 0;
 }
 
 .box {
-
+width: 50%;
+height: 50%;
 }
 
 .box img {
-    width: 25%;
-    height: 25%;
+  width: 100%;
+  height: 100%;
+}
+
+.box h4 {
+    position: relative;
+    background-color: teal;
+    color: black;
+    bottom: 25px;
+    display: inline;
+    margin: 0;
 }
 
 #project2 {
@@ -162,6 +174,8 @@ section > h2 {
 /* contact me section styling */
 
 #contact-me {
+    /* margin-top: 100px;
+    margin-bottom: 50px; */
     display: flex; 
     flex-direction: row;
     align-items: center;
@@ -171,12 +185,11 @@ section > h2 {
 #contact-me ul {
     text-align: right;
     display: flex;
-    justify-content: space-between;
 }
 
 #contact-me li {
     display: inline; 
-    margin: 0 10px; 
+    margin: 0 20px; 
     text-wrap: nowrap;
 }
 
