--- a/assets/style.css
+++ b/assets/style.css
@@ -103,12 +103,17 @@ section > h2 {
     height: 80vh;
 }
 
+/* largest box/ main project styling */
 #primary-project {
     width: 100%;
     min-height: 50px;
     border: 2px solid teal;
     height: 50%;
     margin-top: 0;
+}
+
+#primary-project:hover {
+    transform: scale(1.05);
 }
 
 #primary-project img {
@@ -124,6 +129,8 @@ section > h2 {
     display: inline;
 
 }
+
+/* smaller boxes/ secondary projects styling */
 
 #secondary-project {
     display: flex;
@@ -157,8 +164,6 @@ border: 1px solid teal;
 /* contact me section styling */
 
 #contact-me {
-    /* margin-top: 100px;
-    margin-bottom: 50px; */
     padding: 50px 0; 
     display: flex; 
     flex-direction: row;
@@ -177,6 +182,8 @@ border: 1px solid teal;
     text-wrap: nowrap;
 }
 
+
+/* media query for very small screens */
 @media screen and (max-width: 800px) {
 body {
     justify-content: center;
